[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
flagset = "0.4.6"
fxhash = "0.2.1"
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
smallvec = "1.10.0"
strum = "0.26.3"
strum_macros = "0.26.4"
swc_core = { version = "0.106.*", features = ["ecma_ast"] }
swc_ecma_codegen = "0.158.*"
swc_ecma_parser = "0.152.*"
swc_html_ast = "0.40.*"
swc_html_parser = "0.46.*"

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.

# Use the `--profile release-debug` flag to show symbols in release mode.
# e.g. `cargo build --profile release-debug`
[profile.release-debug]
inherits = "release"
strip    = false
debug    = true
