[package]
name = "fervid"
description = "Vue SFC compiler written in Rust"
version = "0.0.3"
edition = "2021"
authors = ["Marsel Shaikhin <phoenix.apps@yahoo.com>"]
repository = "https://github.com/phoenix-ru/rust-vue-compiler"
license = "Apache-2.0"

[features]
default = []
dbg_print = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fervid_codegen = { path="../fervid_codegen", version = "0.0.1" }
fervid_core = { path="../fervid_core", version = "0.0.1" }
fervid_css = { path="../fervid_css", version = "0.0.1" }
fervid_parser = { path="../fervid_parser", version = "0.0.1" }
fervid_transform = { path="../fervid_transform", version = "0.0.1" }
nom = "7"
regex = "1"
phf = { workspace = true }
swc_ecma_codegen ={ workspace = true }
swc_ecma_parser = { workspace = true }
swc_core = { workspace = true, features = ["ecma_ast"] }
lazy_static = { workspace = true }
fxhash = { workspace = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "codegen_bench"
harness = false

[[bench]]
name = "full_bench"
harness = false
