[package]
name = "fervid_codegen"
description = "EcmaScript code generation for the fervid crate"
version = "0.0.1"
edition = "2021"
authors = ["Marsel Shaikhin <phoenix.apps@yahoo.com>"]
repository = "https://github.com/phoenix-ru/fervid"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fervid_core = { path="../fervid_core", version = "0.0.1" }
lazy_static = "1.4.0"
swc_core = { version = "0.75.*", features = ["common_plugin_transform", "ecma_ast"] }
swc_ecma_codegen = "0.138.*"
fxhash = "0.2.1"
smallvec = "1.10.0"
regex = "1"
flagset = "0.4.3"

[dev-dependencies]
panic-message = "0.3.0"
swc_ecma_parser = "0.133.*"
