[package]
name = "fervid_codegen"
description = "EcmaScript code generation for the fervid crate"
version = "0.2.0"
edition = "2021"
authors = ["Marsel Shaikhin <phoenix.apps@yahoo.com>"]
repository = "https://github.com/phoenix-ru/fervid"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fervid_core = { path="../fervid_core", version = "0.2" }
fervid_transform = { path="../fervid_transform", version="0.2" }
lazy_static = { workspace = true }
swc_core = { workspace = true, features = ["ecma_ast", "ecma_visit", "common_sourcemap"] }
swc_ecma_codegen = { workspace = true }
fxhash = { workspace = true }
smallvec = { workspace = true }
regex = "1"
flagset = "0.4.3"

[dev-dependencies]
panic-message = "0.3.0"
swc_ecma_parser = { workspace = true }
