[package]
name = "fervid_core"
description = "The core structures and utilities of fervid"
version = "0.2.0"
edition = "2021"
authors = ["Marsel Shaikhin <phoenix.apps@yahoo.com>"]
repository = "https://github.com/phoenix-ru/fervid"
license = "Apache-2.0"
keywords = ["vue3", "SFC", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flagset = { workspace = true }
fxhash = { workspace = true }
phf = { workspace = true }
smallvec = { workspace = true }
strum = "0.26.3"
strum_macros = "0.26.4"
swc_core = { workspace = true, features = ["common", "ecma_ast"] }
