[package]
name = "farm_plugin_vue_fervid"
description = "Vue SFC compiler written in Rust"
version = "0.0.0"
edition = "2021"
authors = ["Marsel Shaikhin <phoenix.apps@yahoo.com>"]
repository = "https://github.com/phoenix-ru/rust-vue-compiler"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { version = "*" }
farmfe_toolkit_plugin_types = { version = "*" }
farmfe_macro_plugin = { version = "*" }
fervid = { path = "../fervid", version = "0.2" }
fxhash = { workspace = true }
