[package]
name = "fervid_napi"
description = "Vue SFC compiler written in Rust"
version = "0.2.0"
edition = "2021"
authors = ["Marsel Shaikhin <phoenix.apps@yahoo.com>"]
repository = "https://github.com/phoenix-ru/rust-vue-compiler"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = "0.2"

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[dependencies]
fervid = { path = "../fervid", version = "0.2" }
fervid_core = { path="../fervid_core", version = "0.2" }
fervid_codegen = { path = "../fervid_codegen", version = "0.2" }
fervid_transform = { path = "../fervid_transform", version = "0.2" }
swc_core = { workspace = true }
fxhash = { workspace = true }

napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "2"
