[package]
name = "fervid_parser"
description = "Vue SFC parser for the fervid crate"
version = "0.0.1"
edition = "2021"
authors = ["Marsel Shaikhin <phoenix.apps@yahoo.com>"]
repository = "https://github.com/phoenix-ru/fervid"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fervid_core = { path = "../fervid_core" }
swc_core = { version = "0.83.*", features = ["common", "ecma_ast"] }
swc_ecma_parser = "0.140.*"
swc_html_ast = "0.32.*"
swc_html_parser = "0.38.*"
