[package]
name = "fervid_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fervid_core = { path = "../fervid_core" }
swc_ecma_codegen = "0.138.*"
swc_ecma_parser = "0.133.*"
swc_core = { version = "0.75.*", features = ["common_plugin_transform", "ecma_ast"] }
lazy_static = "1.4.0"
