[package]
name = "fervid_transform"
description = "Transformations for the fervid crate"
version = "0.0.1"
edition = "2021"
authors = ["Marsel Shaikhin <phoenix.apps@yahoo.com>"]
repository = "https://github.com/phoenix-ru/fervid"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fervid_core = { path="../fervid_core", version = "0.0.1" }
fxhash = "0.2.1"
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
swc_core = { version = "0.83.*", features = ["common", "ecma_ast", "ecma_visit"] }
smallvec = "1.10.0"

[dev-dependencies]
swc_ecma_codegen = "0.145.*"
swc_ecma_parser = "0.140.*"
