[package]
name = "fervid_transform"
description = "Transformations for the fervid crate"
version = "0.2.0"
edition = "2021"
authors = ["Marsel Shaikhin <phoenix.apps@yahoo.com>"]
repository = "https://github.com/phoenix-ru/fervid"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flagset = { workspace = true }
fervid_core = { path="../fervid_core", version = "0.2" }
fervid_css = { path="../fervid_css", version = "0.2" }
fxhash = { workspace = true }
lazy_static = { workspace = true }
phf = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
swc_core = { workspace = true, features = ["common", "ecma_ast", "ecma_visit"] }
itertools = "*"
url = "2"
percent-encoding = "*"

[dev-dependencies]
swc_ecma_codegen = { workspace = true }
swc_ecma_parser = { workspace = true }
