[package]
name = "fervid_wasm"
description = "WASM bindings for the fervid project"
version = "0.0.1"
edition = "2021"
authors = ["Marsel Shaikhin <phoenix.apps@yahoo.com>"]
repository = "https://github.com/phoenix-ru/rust-vue-compiler"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
fervid = { path = "../fervid", version = "0.0.3" }

wasm-bindgen = "0.2.87"
wee_alloc = "0.4.5"
